Fix overlapping elements in viewer footer

--- a/static/less/viewer.less
+++ b/static/less/viewer.less
@@ -518,7 +518,7 @@
       background-repeat: no-repeat;
       height: 27px;
       top: 9px;
-      width: 50px;
+      width: 40px;
 
       span {
         .hide-text;
@@ -562,6 +562,7 @@
     background-color: @blue-gray;
     position: absolute;
     right: 60px;
+    width: 50px;
 
     @media (min-width: @viewer-nav-breakpoint) {
      width: @toc-width;
